# dissect

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: checks.yaml  licenses.yaml  release.yaml  tests.yml
src/: lib.rs
tests/: dissect.rs
