[package]
name = "dissect"
version = "0.7.1"
authors = ["The Tremor Team"]
edition = "2021"
license = "Apache-2.0"
description = "Logstash inspired dissect extractor"
readme = "README.md"

[dependencies]
simd-json = { version = "0.12" }

[features]
default = ["known-key"]
known-key = ["simd-json/known-key"]
arraybackend = ["simd-json/arraybackend"]
